[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/turrets/BunnySnakeStick.png" type="Texture" id=1]
[ext_resource path="res://scenes/towers/hitbox.gd" type="Script" id=2]
[ext_resource path="res://scenes/towers/hurtbox.gd" type="Script" id=3]
[ext_resource path="res://scenes/towers/snake_tower.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "attack",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 10.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.5, 14.5 )

[node name="snake_tower" type="Node2D"]
script = ExtResource( 4 )
_health = 25
_fire_delay = 0.5

[node name="shooting_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 3 )
frames = SubResource( 5 )
animation = "attack"
frame = 3

[node name="fire_timer" type="Timer" parent="."]

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -9, -1 )
shape = SubResource( 7 )

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )
damage = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 16.5, 1.5 )
shape = SubResource( 6 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
